# StupidPoet

./: .gitignore  ReadMe.md  Stupid Poet Design Document.docx  cmake-run.bat  learn.bat  test_regression.bat  tests.bat
data/train/normalized/: 一七令山.txt  一丛花令伤高怀远几时穷.txt  一丛花溪堂玩月作.txt  一剪梅中秋无月.txt  一剪梅咏柳.txt  一剪梅堆枕乌云堕翠翘.txt  一剪梅红藕香残玉簟秋.txt  一剪梅雨打梨花深闭门.txt  一枝春竹爆惊春.txt  一枝花杭州景.txt  一毛不拔.txt  一箧磨穴砚.txt  一萼红登蓬莱阁有感.txt  丁洲怀古.txt  七哀.txt  七哀诗.txt  七哀诗三首其三.txt  七夕.txt  七夕二首其一.txt  七夕二首其二.txt  七夕曝衣篇.txt  七夕曲.txt  七夕歌.txt  七夕穿针.txt  七律人民解放军占领南京.txt  七律吊罗荣桓同志.txt  七律长征.txt  七绝为女民兵题照.txt  七绝为李进同志题所摄庐山仙人洞照.txt  七绝五云山.txt  七绝咏蛙.txt  七绝莫干山.txt  万山潭作.txt  万里瞿塘月.txt  三五七言秋风词.txt  三人成虎.txt  三台清明应制.txt  三垂冈.txt  三姝媚过都城旧居有感.txt  三峡.txt  (+2975 more)
data/train/raw/: 一七令山.txt  一丛花令伤高怀远几时穷.txt  一丛花溪堂玩月作.txt  一剪梅中秋无月.txt  一剪梅咏柳.txt  一剪梅堆枕乌云堕翠翘.txt  一剪梅雨打梨花深闭门.txt  一枝春竹爆惊春.txt  一枝花杭州景.txt  一箧磨穴砚.txt  一萼红登蓬莱阁有感.txt  丁洲怀古.txt  七哀.txt  七哀诗三首其三.txt  七夕.txt  七夕二首其一.txt  七夕二首其二.txt  七夕曝衣篇.txt  七夕曲.txt  七夕歌.txt  七夕穿针.txt  七律人民解放军占领南京.txt  七律吊罗荣桓同志.txt  七律长征.txt  七绝为女民兵题照.txt  七绝为李进同志题所摄庐山仙人洞照.txt  七绝五云山.txt  七绝咏蛙.txt  七绝莫干山.txt  万山潭作.txt  万里瞿塘月.txt  三五七言秋风词.txt  三台清明应制.txt  三姝媚过都城旧居有感.txt  三峡.txt  三江小渡.txt  三部乐商调梅雪.txt  三都赋.txt  上三峡.txt  上元夜六首其一.txt  (+2375 more)
data/train/test/expects/: model.json
data/train/test/inputs/: dup-line.txt  one-line.txt  ordinary.txt
doc/: Stupid Poet Development Document.docx  Stupid-Poet-Development-Document.docx
src/: CMakeLists.txt
src/driver/: CMakeLists.txt  Learn.cpp
src/fetch-data/: Common.py  Meta.py  Scrape.py
src/infra/: CMakeLists.txt  Env.hpp  ExceptionBase.cpp  ExceptionBase.hpp  FileIo.cpp  FileIo.hpp  InfraException.cpp  InfraException.hpp  NGram.cpp  NGram.hpp  Poet.cpp  Poet.hpp  Poetry.cpp  Poetry.hpp  Sentence.cpp  Sentence.hpp  UStr.cpp  UStr.hpp
src/infra/test/: CMakeLists.txt  UnitPoetry.cpp  UnitSentence.cpp
src/model/: CMakeLists.txt  Model.cpp  Model.hpp  ModelException.hpp  NGram.cpp  NGram.hpp  Poetry.cpp  Poetry.hpp  Sentence.cpp  Sentence.hpp
src/model/test/: CMakeLists.txt  UnitPoetry.cpp  UnitSentence.cpp
src/train/: Normalize.py  Scrape.py
src/utility/: Json.hpp  UtilityException.hpp
src/utility/json/: CMakeLists.txt  JsonArray.cpp  JsonArray.hpp  JsonDoc.cpp  JsonDoc.hpp  JsonElem.hpp  JsonObject.cpp  JsonObject.hpp  JsonObjectInterface.hpp  JsonTuple.hpp  JsonValue.cpp  JsonValue.hpp
src/utility/json/test/: CMakeLists.txt  UnitJsonDoc.cpp
test/: learn.py
